--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Door Installation Idaho Falls, ID | CKSIDAHO</title>
   <meta name="description" content="Looking for expert door installation in Idaho Falls, ID? CKS Idaho offers secure, stylish, and long-lasting door solutions tailored to your home." />
-  <style>
+ <meta name="google-site-verification" content="LXDb4ICXSgu_epaSw_ZAEys9TsebpAl0ZMm8p_BIob0" />
+ <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; color: #333; background: #fff; }
     header { position: relative; text-align: center; color: #fff; }
     header img.hero-img { width: 100%; height: 500px; object-fit: cover; display: block; }
@@ -117,6 +118,38 @@
     </div>
   </div>
 </section>
+
+<!-- Benefits Section -->
+<div class="section" style="background:#eaf6ff; padding:50px 20px;">
+  <div style="max-width:1200px; margin:auto;">
+    <h2 style="text-align:center; font-size:28px; color:#004d99;">Benefits of Choosing CKS Idaho</h2>
+    <p style="font-size:16px; line-height:1.7; color:#333;">
+      When it comes to reliable <a href="https://cksidaho.com/" style="color:#004d99; text-decoration:underline;">windows installation Idaho Falls, ID</a>, homeowners consistently choose CKS Idaho. Our team has built a reputation for providing secure, stylish, and durable doors that perfectly match your home’s design and performance needs.
+    </p>
+    <p style="font-size:16px; line-height:1.7; color:#333;">
+      From start to finish, we ensure precision, transparency, and customer satisfaction. Our benefits include personalized recommendations, access to high-quality door materials, and expert installation that guarantees long-term durability. 
+    </p>
+    <p style="font-size:16px; line-height:1.7; color:#333;">
+      We also offer ongoing support and guidance, ensuring you get the most out of your investment. With us, you don’t just get a door; you get peace of mind, security, and style that lasts for years.
+    </p>
+  </div>
+</div>
+
+<!-- Why Choose Us Section -->
+<div class="section" style="background:#ffffff; padding:50px 20px;">
+  <div style="max-width:1200px; margin:auto;">
+    <h2 style="text-align:center; font-size:28px; color:#004d99;">Why Choose Us</h2>
+    <p style="font-size:16px; line-height:1.7; color:#333;">
+      CKS Idaho stands apart from the competition because of our hands-on approach, professional craftsmanship, and dedication to excellence. Unlike general contractors, we specialize in doors, which means every installation is done with the highest level of expertise.
+    </p>
+    <p style="font-size:16px; line-height:1.7; color:#333;">
+      We focus on delivering both function and design, ensuring that every door not only enhances your home’s security but also complements its overall style. Our team uses proven installation techniques, ensuring your door operates smoothly and remains durable for years to come.
+    </p>
+    <p style="font-size:16px; line-height:1.7; color:#333;">
+      Choosing us means choosing a partner who values your home as much as you do. With transparent communication, fair pricing, and a strong track record in Idaho Falls, we are the trusted choice for homeowners seeking reliable door solutions.
+    </p>
+  </div>
+</div>
 
 <footer>
   <p>&copy; 2025 CKS Idaho. All rights reserved. | <a href="https://cksidaho.com/privacy-policy/">Privacy Policy</a></p>
